typesafe_idb/tests/ui/txn_for_store_not_in_db.stderr
error[E0277]: the trait bound `(RepositoryStoreMarker, ()): StoreMarker<User>` is not satisfied
  --> tests/ui/txn_for_store_not_in_db.rs:43:18
   |
43 |         db.txn().with_store::<User>();
   |                  ^^^^^^^^^^ the trait `StoreMarker<User>` is not implemented for `(RepositoryStoreMarker, ())`
   |
   = help: the trait `StoreMarker<S>` is implemented for `(Head, Tail)`
note: required by a bound in `TxnBuilder::<'db, DbTableMarkers, TxnTableMarkers, Mode>::with_store`
  --> src/txn.rs
   |
   |     pub fn with_store<H2>(
   |            ---------- required by a bound in this associated function
...
   |         DbTableMarkers: StoreMarker<H2>,
   |                         ^^^^^^^^^^^^^^^ required by this bound in `TxnBuilder::<'db, DbTableMarkers, TxnTableMarkers, Mode>::with_store`
